Refactorizado código y agregadas pantallas abrir y guardar